shimlang/test_scripts/errors/missing_semicolon_expr.stderr
Parse Error:
 3 | print("hello");
     ^^^^^
Error: Expected semicolon after expression statement, found Identifier([112, 114, 105, 110, 116])
Failed to parse script
